Fix permissions in the GitHub action that publishes the documentation.
Signed-off-by: rafa-be <raphael@noisycamp.com>

--- a/.github/workflows/documentation.yml
+++ b/.github/workflows/documentation.yml
@@ -3,16 +3,16 @@ name: Publish documentation to GitHub Pages
 on:
   release:
     types: [created]
+  workflow_dispatch:
 
 permissions:
   contents: read
+  pages: write
+  id-token: write
 
 jobs:
   deploy:
     runs-on: ubuntu-latest
-    permissions:
-      pages: write
-      id-token: write
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
