--- a/pyproject.toml
+++ b/pyproject.toml
@@ -25,7 +25,7 @@ Issues = "https://github.com/Citi/parfun/issues"
 [project.optional-dependencies]
 pandas = ["pandas"]
 dask = ["dask", "distributed"]
-scaler = ["scaler[graphblas]"]
+scaler = ["scaler"]
 
 [tool.setuptools]
 packages = ["parfun"]
