--- a/.github/workflows/linter.yml
+++ b/.github/workflows/linter.yml
@@ -44,3 +44,11 @@ jobs:
       - name: Run python unittest
         run: |
           python -m unittest discover -v tests
+      - name: Run the examples
+        run: |
+          for dir in "./examples"/*; do
+            if [ -f "$dir/main.py" ]; then
+                echo "Running $dir/main.py"
+                PYTHONPATH=. python "$dir/main.py"
+            fi
+          done
