Run and test the documentation examples before publishing.
Signed-off-by: rafa-be <raphael@noisycamp.com>

--- a/.github/workflows/linter.yml
+++ b/.github/workflows/linter.yml
@@ -52,3 +52,8 @@ jobs:
                 PYTHONPATH=. python "$dir/main.py"
             fi
           done
+      - name: Test the documentation examples
+        run: |
+          pip install -r docs/requirements.txt
+          cd docs
+          make doctest
