Fixes and improves examples in README and documentation. (#32)
* Fixes and improves examples in README and documentation.

Signed-off-by: rafa-be <raphael@noisycamp.com>

* Shutdown any currently running backend when exiting Python.

Signed-off-by: rafa-be <raphael@noisycamp.com>

* Adds new examples (random forest and bigram counter).

Signed-off-by: rafa-be <raphael@noisycamp.com>

* Adds the examples to the documentation.

Signed-off-by: rafa-be <raphael@noisycamp.com>

* Bump version number.

Signed-off-by: rafa-be <raphael@noisycamp.com>

* Run and test the documentation examples before publishing.

Signed-off-by: rafa-be <raphael@noisycamp.com>

* Donwload the example file for the bigram example instead of storing it in the repository.

Signed-off-by: rafa-be <raphael@noisycamp.com>

* Removes the use of argparse in examples.

Signed-off-by: rafa-be <raphael@noisycamp.com>

* Shows the package version in the documentation's sidebar.

Signed-off-by: rafa-be <raphael@noisycamp.com>

* Uses Scaler's default address for the local managed backend.

Signed-off-by: rafa-be <raphael@noisycamp.com>

* Rewrite and improve examples from the quickstart tutorial.

Signed-off-by: rafa-be <raphael@noisycamp.com>

---------

Signed-off-by: rafa-be <raphael@noisycamp.com>

--- a/.github/workflows/linter.yml
+++ b/.github/workflows/linter.yml
@@ -34,7 +34,7 @@ jobs:
           python -m pip install --upgrade pip
           pip install flake8 pyproject-flake8 mypy
           pip install -r requirements.txt
-          pip install pandas dask[distributed]
+          pip install pandas dask[distributed] scaler
       - name: Lint with flake8
         run: |
           pflake8 .
@@ -44,3 +44,14 @@ jobs:
       - name: Run python unittest
         run: |
           python -m unittest discover -v tests
+      - name: Run the examples
+        run: |
+          find examples -type f -name '*.py' ! -name '__init__.py' | while read -r file; do
+            echo "Running $file"
+            PYTHONPATH=. python "$file"
+          done
+      - name: Test the documentation examples
+        run: |
+          pip install -r docs/requirements.txt
+          cd docs
+          make doctest
