--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,7 +5,7 @@ build-backend = "setuptools.build_meta"
 [project]
 name = "parfun"
 description = "Lightweight parallelisation library for Python"
-requires-python = ">=3.8"
+requires-python = ">=3.10"
 readme = { file = "README.md", content-type = "text/markdown" }
 license = { text = "Apache 2.0" }
 authors = [{ name = "Citi", email = "opensource@citi.com" }]
@@ -24,7 +24,7 @@ Issues = "https://github.com/Citi/parfun/issues"
 
 [project.optional-dependencies]
 pandas = ["pandas"]
-dask = ["dask", "distributed"]
+dask = ["dask>=2025.5.1", "distributed>=2025.5.1"]
 scaler = ["scaler"]
 
 [tool.setuptools]
