Update renovate configuration to enable automerging of patch versions
Signed-off-by: eric <eric117649@gmail.com>

--- a/renovate.json
+++ b/renovate.json
@@ -2,5 +2,15 @@
   "$schema": "https://docs.renovatebot.com/renovate-schema.json",
   "extends": [
     "config:recommended"
+  ],
+  "automergeType": "pr",
+  "automergeStrategy": "squash",
+  "recreateWhen": "auto",
+  "packageRules": [
+    {
+      "description": "Automerge latest patch versions",
+      "matchUpdateTypes": ["patch"],
+      "automerge": true
+    }
   ]
 }
